wrote media query to fix form spacing issues on mobile and desktop

--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,7 @@ body {
 
 /* CONTACT FORM */
 .container .form-group {
+  width: 50%;
   margin: 0 auto;
   margin-top: 20px;
 }
@@ -255,5 +256,18 @@ form {
 @media (width <= 943px) {
   .gallery {
     padding: 5px;
+  }
+}
+
+/* CONTACT PAGE */
+@media (width <= 943px) {
+  .form-background {
+    width: 90%;
+    padding: 5px;
+    margin: 20px;
+  }
+
+  .container .form-group {
+    width: 95%;
   }
 }
